# saxs-fft

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: Sphere_pytorch.ipynb
saxs_fft/: __init__.py  formfactor.py  gsdio.py  structurefactor.py
saxsfft/: __init__.py  gsdio.py  sasintensity.py  structurefactor.py  utils.py
